--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "accepts": "^1.3.8",
     "array-flatten": "^1.1.1",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "bson": "^5.5.0",
     "buffer-equal-constant-time": "^1.0.1",
